# moonlight-webclient

./: .gitignore  .gitmodules  INSTALL.md  PLAN.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
host-proxy/: Cargo.toml  README.md
host-proxy/src/: channel.rs  config.rs  frame.rs  http.rs  main.rs  mdns.rs  nvhttp.rs  pairing.rs  tcp_relay.rs  tls.rs  udp_relay.rs  ws_session.rs  wt_session.rs
public/: manifest.webmanifest  sw-shell.js
public/icons/: README.md
src/: capabilities.ts  main.ts  vite-env.d.ts
src/audio/: audio-renderer.ts  opus-worklet-url.ts  opus-worklet.js
src/client/: host-store.ts  moonlight-client.ts  nvhttp.ts  pairing.ts  settings.ts  stream-settings.ts
src/input/: gamepad.ts  keyboard.ts  pointer.ts  vk-codes.ts
src/transport/: proxy-transport.ts
src/ui/: app-picker.ts  app.ts  host-list.ts  pair-dialog.ts  settings-dialog.ts  stream-view.ts  styles.css
src/video/: webcodecs-decoder.ts
src/wasm/: bridge.ts  worker.ts
wasm/: CMakeLists.txt  build.sh  moonlight_imports.js
wasm/src/: bindings.c  bindings.h  platform_web.c  transport_bridge.c
